--- a/reizentechnologieApp/composer.json
+++ b/reizentechnologieApp/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "axlon/laravel-postal-code-validation": "^2.0",
         "barryvdh/laravel-ide-helper": "^2.5",
         "ckeditor/ckeditor": "^4.11",
         "fideloper/proxy": "^4.0",
