--- a/reizentechnologieApp/composer.json
+++ b/reizentechnologieApp/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
+        "maatwebsite/excel": "^3.1",
         "mews/captcha": "^2.2",
         "mpdf/mpdf": "^8.0",
         "phpoffice/phpspreadsheet": "^1.7",
