--- a/reizentechnologieApp/composer.json
+++ b/reizentechnologieApp/composer.json
@@ -22,6 +22,7 @@
         "mpdf/mpdf": "^8.0",
         "phpoffice/phpspreadsheet": "^1.7",
         "propaganistas/laravel-phone": "^4.1",
+        "rebing/graphql-laravel": "^2.1",
         "spatie/laravel-cookie-consent": "^2.7",
         "unisharp/laravel-ckeditor": "^4.7",
         "unisharp/laravel-filemanager": "dev-master"
