--- a/reizentechnologieApp/composer.json
+++ b/reizentechnologieApp/composer.json
@@ -23,6 +23,7 @@
         "phpoffice/phpspreadsheet": "^1.7",
         "propaganistas/laravel-phone": "^4.1",
         "spatie/laravel-cookie-consent": "^2.7",
+        "staudenmeir/eloquent-has-many-deep": "^1.7",
         "unisharp/laravel-ckeditor": "^4.7",
         "unisharp/laravel-filemanager": "dev-master"
     },
