--- a/reizentechnologieApp/composer.json
+++ b/reizentechnologieApp/composer.json
@@ -20,6 +20,7 @@
         "maatwebsite/excel": "^3.1",
         "mews/captcha": "^2.2",
         "mpdf/mpdf": "^8.0",
+        "nuwave/lighthouse": "^4.6",
         "phpoffice/phpspreadsheet": "^1.7",
         "propaganistas/laravel-phone": "^4.1",
         "rebing/graphql-laravel": "^2.1",
